<resources>
    <string name="app_name">NotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign-in</string>
    <string name="please_fill_the_form_to_continue">Please fill the form to continue</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in_text">Sign-in</string>
    <string name="or_continue_with">or continue with</string>
    <string name="google_logo">Google Logo</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="add_note">Add Note</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="enter_description_please">Enter description please</string>
    <string name="priority">Priority :</string>
    <string name="enter_subtitle_please">Enter subtitle please</string>
    <string name="enter_title_please">Enter title please</string>
    <string name="edit_note">Edit Note</string>
    <string name="no_notes_available_tap_the_add_button_to_create_a_new_note">No notes available! Tap the Add button to create a new note.</string>
    <string name="a">A</string>
    <string name="welcome">Welcome,</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="please_check_your_connection_for_google_sign_in">Please check your connection for Google Sign-In.</string>
    <string name="kindly_click_the_button_below_to_sign_in">Kindly click the button below to sign in.</string>
    <string name="user_name">User Name</string>
    <string name="user_example_com">user@example.com</string>
    <string name="subtitle">Subtitle</string>
    <string name="_23_23_2332">23-23-2332</string>
    <string name="no_other_profiles_available">No other profiles available!</string>
    <string name="other_profiles">Other profiles</string>
    <string name="loading">Loading....</string>
    <string name="signed_in">Signed In</string>
</resources>