<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cobalt_blue"
    tools:context=".notes.presentation.add_edit.AddOrEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivBackButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:scaleType="center"
                        android:src="@drawable/baseline_keyboard_backspace_24"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/ivAddIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="center"
                        android:src="@drawable/baseline_post_add_24"
                        android:visibility="visible"
                        app:tint="@color/green" />

                    <ImageView
                        android:id="@+id/ivEditIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="center"
                        android:src="@drawable/baseline_edit_24"
                        android:visibility="gone"
                        app:tint="@color/red" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAddText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/add_note"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/tvEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/edit_note"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivDeleteIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/baseline_delete_24"
                    android:visibility="gone"
                    app:tint="@color/red" />
            </LinearLayout>

            <EditText
                android:id="@+id/etEditTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_title"
                android:hint="@string/enter_title_please"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="#A8D1F2" />

            <EditText
                android:id="@+id/etEditSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_title"
                android:hint="@string/enter_subtitle_please"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="#A8D1F2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:gravity="center_vertical"
                    android:text="@string/priority"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/ivLowPriority"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/green_oval"
                    android:src="@drawable/baseline_done_24" />

                <ImageView
                    android:id="@+id/ivMediumPriority"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/yellow_oval" />

                <ImageView
                    android:id="@+id/ivHighPriority"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/red_oval" />

            </LinearLayout>

            <EditText
                android:id="@+id/etEditDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/edit_text_title"
                android:gravity="start"
                android:hint="@string/enter_description_please"
                android:inputType="text"
                android:minHeight="260dp"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="#A8D1F2" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:contentDescription="@string/add"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15ssp"
        app:backgroundTint="@color/light_blue"
        app:icon="@drawable/baseline_done_24"
        app:iconPadding="@dimen/_2sdp"
        app:iconSize="@dimen/_20sdp"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>