<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cobalt_blue"
    android:padding="@dimen/_16sdp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:id="@+id/llNoInternet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Internet Connection!"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />
            <ImageView
                android:id="@+id/ivNoWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:visibility="visible"
                android:scaleType="center"
                android:src="@drawable/baseline_wifi_off_24"
                app:tint="@color/red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please check your connection for Google Sign-In."
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/clSignIn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:visibility="visible"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       >
       <TextView
           android:id="@+id/tvSignIn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sign_in"
           android:textSize="@dimen/_24ssp"
           android:textStyle="bold"
           android:textColor="@color/white"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>



       <TextView
           android:id="@+id/tvOrContinueWith"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Kindly click the button below to sign in."
           android:textSize="@dimen/_14ssp"
           android:textStyle="bold"
           android:textColor="@color/white"
           app:layout_constraintTop_toBottomOf="@id/tvSignIn"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="@dimen/_16sdp"/>

       <LinearLayout
           android:id="@+id/signInButton"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/_16sdp"
           android:background="@drawable/button_click_effect"
           android:gravity="center_horizontal"
           android:orientation="horizontal"
           android:padding="@dimen/_5sdp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/tvOrContinueWith">

           <ImageView
               android:id="@+id/googleImage"
               android:layout_width="@dimen/_32sdp"
               android:layout_height="@dimen/_32sdp"
               android:layout_gravity="center_vertical"
               android:layout_marginEnd="@dimen/_8sdp"
               android:contentDescription="@string/google_logo"
               android:src="@drawable/google_image" />

           <TextView
               android:id="@+id/googleText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:text="@string/sign_in_with_google"
               android:textColor="@color/black"
               android:textSize="@dimen/_14ssp"
               android:textStyle="bold" />
       </LinearLayout>
   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
